noinst_LIBRARIES = libfx.a

libfx_a_SOURCES = Camera.cpp Filter.cpp Fire.cpp Math3d.cpp ParticleBlobs.cpp \
ParticleEmitter.cpp ParticleFX.cpp ParticleFun.cpp ParticleScene.cpp \
Starfield.cpp TCBSpline.cpp TCBSplineTest.cpp Texture.cpp TexturedGrid.cpp \
TexturedPlane.cpp Twister.cpp TwisterFX.cpp fpmath.cpp

noinst_HEADERS = Camera.h FXAbstract.h FXInterface.h Filter.h Fire.h Math3d.h \
ParticleBlobs.h ParticleEmitter.h ParticleFX.h ParticleFun.h ParticleScene.h \
PictureGlow.h Starfield.h TCBSpline.h TCBSplineTest.h Texture.h TexturedGrid.h \
TexturedPlane.h Twister.h TwisterFX.h fpmath.h

INCLUDES = -I$(top_srcdir)/src/ppui -I$(top_srcdir)/src/ppui/osinterface \
-I$(top_srcdir)/src/ppui/osinterface/posix
